--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,17 @@ a {
 /*img {
   margin-top: 43px;
 }*/
+
+@media (max-width: 1100px) {
+  .button-container {
+    display: none;
+  }
+}
+
+@media (max-width: 725px) {
+  #beautified {
+    width: 100%;
+    padding: 0 30px;
+  }
+
+}
