--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* Medium Styles */
+
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Open Sans","Helvetica Neue",sans-serif;
   letter-spacing: 0;
@@ -100,5 +102,4 @@ a {
     width: 100%;
     padding: 0 30px;
   }
-
 }
