--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,5 @@
+/* Facebook Styles */
+
 body {
   background-color: #e9eaed;
 }
@@ -67,4 +69,17 @@ a {
   color: #3b5998;
   cursor: pointer;
   text-decoration: none;
+}
+
+@media (max-width: 1100px) {
+  .button-container {
+    display: none;
+  }
+}
+
+@media (max-width: 725px) {
+  #beautified {
+    width: 100%;
+    padding: 0 30px;
+  }
 }
